设计了index的页面样子,同时也再次优化了菜单界面（删除了不用的mail信息）

--- a/css/style.css
+++ b/css/style.css
@@ -1177,3 +1177,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#356aa0', end
 }
 /*COMMENTS*/
 /* --------------- END Component Styles -------------------- */
+
+
+
+
+.stats_box .stat_text .percent.red{
+  color: #C52F61;
+}
+
+.stats_box .stat_text .percent.green{
+  color: #46a546;
+}
